# type-label

./: Cargo.toml  README.md
src/: lib.rs
src/derive/: Cargo.toml  mod.rs
tests/: type_label.rs
