[package]
name = "type-label"
version = "0.1.0"
edition = "2021"
authors = ["drmason13 <drmason13@users.noreply.github.com>"]
description = "provide a 'Display-appropriate' label for your types"
repository = "https://github.com/drmason13/type-label/"
license = "MIT OR Apache-2.0"
keywords = ["type", "label", "named"]
categories = ["rust-patterns", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.derive]
package = "type-label-derive"
path = "src/derive"
version = "0.1.0"  # Same as main version
optional = true

[features]
derive = ["dep:derive"]
default = ["derive"]

[workspace]
members = ["src/derive"]

[dev-dependencies]
derivative = "2.2.0"
