[package]
name = "type-label-derive"
version = "0.1.0"
authors = ["drmason13 <drmason13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "mod.rs"

[dependencies]
proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = { version = "1.0.*", features = [] }  # you may need "full" features
indoc = "1.0.7"
